# p2pool-exporter

./: .gitignore  AGENTS.md  beads.db  flake.nix
.beads/: issues.jsonl
nix/: uv_setup.nix
nix/overlays/github/: default.nix
nix/shells/dev/: default.nix
p2pool-exporter/: pyproject.toml
p2pool-exporter/p2pool_exporter/: __main__.py  api.py  telemetry.py  utils.py
