[project]
name = "p2pool-exporter"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "apscheduler>=3.11.0",
    "asyncio>=3.4.3",
    "observlib",
    "opentelemetry-api>=1.32.0",
    "opentelemetry-exporter-otlp>=1.32.0",
    "opentelemetry-exporter-prometheus>=0.53b0",
    "opentelemetry-instrumentation-asyncio>=0.53b0",
    "opentelemetry-instrumentation-redis>=0.58b0",
    "opentelemetry-instrumentation-urllib>=0.53b0",
    "opentelemetry-sdk>=1.32.0",
    "pyroscope-io>=0.8.8",
    "pyroscope-otel>=0.4.0",
    "redis>=6.4.0",
]

[project.scripts]
p2pool-exporter = "p2pool_exporter:__main__.run"

[tool.uv.sources]
observlib = { git = "https://github.com/ForgottenBeast/observlib.git", subdirectory = "observlib" }
